--- a/pages/project.html
+++ b/pages/project.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Project</title>
       <link rel="stylesheet" href="../styles/main.css" />
 </head>
+
 <body>
       <header class="header" id="header">
             <div class="header__container container">
@@ -42,6 +44,43 @@
                         <h1 class="page-title__title title" style="font-size: 64px;">Modern Cottage</h1>
                   </div>
             </section>
+            <section class="gallery">
+                  <div class="gallery-container container">
+                        <div class="slider__btn disabled" id="slide-gallery-to-left">
+                              <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                          d="M9.20711 17.2071C8.81658 17.5976 8.18342 17.5976 7.79289 17.2071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929L7.79289 6.79289C8.18342 6.40237 8.81658 6.40237 9.20711 6.79289C9.59763 7.18342 9.59763 7.81658 9.20711 8.20711L6.41421 11L20 11C20.5523 11 21 11.4477 21 12C21 12.5523 20.5523 13 20 13L6.41421 13L9.20711 15.7929C9.59763 16.1834 9.59763 16.8166 9.20711 17.2071Z"
+                                          fill="#1E212C" />
+                              </svg>
+                        </div>
+                        <div class="slider__btn" id="slide-gallery-to-right">
+                              <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                          d="M14.7929 6.79289C15.1834 6.40237 15.8166 6.40237 16.2071 6.79289L20.7071 11.2929C21.0976 11.6834 21.0976 12.3166 20.7071 12.7071L16.2071 17.2071C15.8166 17.5976 15.1834 17.5976 14.7929 17.2071C14.4024 16.8166 14.4024 16.1834 14.7929 15.7929L17.5858 13H4C3.44772 13 3 12.5523 3 12C3 11.4477 3.44772 11 4 11H17.5858L14.7929 8.20711C14.4024 7.81658 14.4024 7.18342 14.7929 6.79289Z"
+                                          fill="#1E212C" />
+                              </svg>
+                        </div>
+                        <div class="gallery__slider">
+                              <img src="../assets/project/image-1.png" alt="image-1">
+                              <img src="../assets/project/image-2.png" alt="image-2">
+                              <img src="../assets/project/image-3.png" alt="image-3">
+                              <img src="../assets/project/image-4.png" alt="image-4">
+                              <img src="../assets/project/image-5.png" alt="image-5">
+                              <img src="../assets/project/image-6.png" alt="image-6">
+                        </div>
+                        <div class="gallery__thumbnails">
+                              <img src="../assets/project/image-1.png" alt="image-1">
+                              <img src="../assets/project/image-2.png" alt="image-2">
+                              <img src="../assets/project/image-3.png" alt="image-3">
+                              <img src="../assets/project/image-4.png" alt="image-4">
+                              <img src="../assets/project/image-5.png" alt="image-5">
+                              <img src="../assets/project/image-6.png" alt="image-6">
+                        </div>
+
+                  </div>
+            </section>
             <section class="application">
                   <div class="application-container container">
                         <form action="" class="aplication__form">
@@ -49,7 +88,8 @@
                               <ul class="form__inputs">
                                     <li class="form__input input-block">
                                           <label for="name">Name*</label>
-                                          <input type="text" name="name" id="application-name-input" placeholder="Your name">
+                                          <input type="text" name="name" id="application-name-input"
+                                                placeholder="Your name">
                                     </li>
                                     <li class="form__input input-block">
                                           <label for="phone">Phone*</label>
@@ -67,7 +107,8 @@
                                                 placeholder="Your message"></textarea>
                                     </li>
                                     <div class="form__checkbox">
-                                          <input type="checkbox" name="form-checkbox" id="form-checkbox" class="custom-checkbox">
+                                          <input type="checkbox" name="form-checkbox" id="form-checkbox"
+                                                class="custom-checkbox">
                                           <label for="form-checkbox">I agree to receive communications from Createx
                                                 Construction
                                                 Bureau.</label>
@@ -207,4 +248,5 @@
       </div>
 </body>
 <script src="../scripts/index.js"></script>
+
 </html>
