add gallery slider

--- a/pages/project.html
+++ b/pages/project.html
@@ -46,6 +46,22 @@
             </section>
             <section class="gallery">
                   <div class="gallery-container container">
+                        <div class="gallery__slider">
+                              <img src="../assets/project/gallery.jpg" alt="image-1">
+                              <img src="../assets/project/gallery.jpg" alt="image-2">
+                              <img src="../assets/project/gallery.jpg" alt="image-3">
+                              <img src="../assets/project/gallery.jpg" alt="image-4">
+                              <img src="../assets/project/gallery.jpg" alt="image-5">
+                              <img src="../assets/project/gallery.jpg" alt="image-6">
+                        </div>
+                        <div class="gallery__thumbnails" show="1">
+                              <img src="../assets/project/image-1.png" alt="image-1">
+                              <img src="../assets/project/image-2.png" alt="image-2">
+                              <img src="../assets/project/image-3.png" alt="image-3">
+                              <img src="../assets/project/image-4.png" alt="image-4">
+                              <img src="../assets/project/image-5.png" alt="image-5">
+                              <img src="../assets/project/image-6.png" alt="image-6">
+                        </div>
                         <div class="slider__btn disabled" id="slide-gallery-to-left">
                               <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -62,23 +78,6 @@
                                           fill="#1E212C" />
                               </svg>
                         </div>
-                        <div class="gallery__slider">
-                              <img src="../assets/project/image-1.png" alt="image-1">
-                              <img src="../assets/project/image-2.png" alt="image-2">
-                              <img src="../assets/project/image-3.png" alt="image-3">
-                              <img src="../assets/project/image-4.png" alt="image-4">
-                              <img src="../assets/project/image-5.png" alt="image-5">
-                              <img src="../assets/project/image-6.png" alt="image-6">
-                        </div>
-                        <div class="gallery__thumbnails">
-                              <img src="../assets/project/image-1.png" alt="image-1">
-                              <img src="../assets/project/image-2.png" alt="image-2">
-                              <img src="../assets/project/image-3.png" alt="image-3">
-                              <img src="../assets/project/image-4.png" alt="image-4">
-                              <img src="../assets/project/image-5.png" alt="image-5">
-                              <img src="../assets/project/image-6.png" alt="image-6">
-                        </div>
-
                   </div>
             </section>
             <section class="application">
