--- a/pages/project.html
+++ b/pages/project.html
@@ -82,41 +82,42 @@
             </section>
             <section class="project-about">
                   <div class="project-about-container container">
-                        <ul class="project-about__goal">
+                        <article class="project-about__goal">
                               <h3 class="goal__title title">Project goal</h3>
-                              <p class="goal__descroption">
+                              <p class="goal__description">
                                     Build a private house 840 sq. feet with a large living room,
                                     three bedrooms, two bathrooms, a terrace, a pool and
                                     a garage for two cars. <br><br>
                                     Modern design and care for each family member to feel as comfortable as possible
                                     in the new home.
                               </p>
-                        </ul class="project-about__info">
-                        <li class="info__item">
-                              <h4 class="item__title title">LOCATION</h4>
-                              <p class="item__subtitle subtitle">2464 Royal Ln. Mesa, New Jersey</p>
-                        </li>
-                        <li class="info__item">
-                              <h4 class="item__title title">CLIENT</h4>
-                              <p class="item__subtitle subtitle">Darlene Robertson</p>
-                        </li>
-                        <li class="info__item">
-                              <h4 class="item__title title">ARCHITECT</h4>
-                              <p class="item__subtitle subtitle">HIK Architecture</p>
-                        </li>
-                        <li class="info__item">
-                              <h4 class="item__title title">SIZE</h4>
-                              <p class="item__subtitle subtitle">840 sq. feet</p>
-                        </li>
-                        <li class="info__item">
-                              <h4 class="item__title title">VALUE</h4>
-                              <p class="item__subtitle subtitle">$2 million</p>
-                        </li>
-                        <li class="info__item">
-                              <h4 class="item__title title">COMPLETED</h4>
-                              <p class="item__subtitle subtitle">May 2020</p>
-                        </li>
                         </article>
+                        <ul class="project-about__info">
+                              <li class="info__item">
+                                    <h4 class="item__title title">LOCATION</h4>
+                                    <p class="item__subtitle subtitle">2464 Royal Ln. Mesa, New Jersey</p>
+                              </li>
+                              <li class="info__item">
+                                    <h4 class="item__title title">CLIENT</h4>
+                                    <p class="item__subtitle subtitle">Darlene Robertson</p>
+                              </li>
+                              <li class="info__item">
+                                    <h4 class="item__title title">ARCHITECT</h4>
+                                    <p class="item__subtitle subtitle">HIK Architecture</p>
+                              </li>
+                              <li class="info__item">
+                                    <h4 class="item__title title">SIZE</h4>
+                                    <p class="item__subtitle subtitle">840 sq. feet</p>
+                              </li>
+                              <li class="info__item">
+                                    <h4 class="item__title title">VALUE</h4>
+                                    <p class="item__subtitle subtitle">$2 million</p>
+                              </li>
+                              <li class="info__item">
+                                    <h4 class="item__title title">COMPLETED</h4>
+                                    <p class="item__subtitle subtitle">May 2020</p>
+                              </li>
+                        </ul>
                   </div>
             </section>
             <section class="application">
