add decisions section styles

--- a/pages/project.html
+++ b/pages/project.html
@@ -124,7 +124,7 @@
                   <div class="decisions-container container">
                         <img src="../assets/project/decisions.jpg" alt="decisions">
                         <div class="decisions__content">
-                              <h2 class="decisions__title">Constructive decisions</h2>
+                              <h2 class="decisions__title title">Constructive decisions</h2>
                               <ul class="decisions__list">
                                     <li class="decisions__item">
                                           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
