--- a/pages/project.html
+++ b/pages/project.html
@@ -137,16 +137,19 @@
                                           <p class="item__text">Vitae ultrices ornare eu sed in est quisque duis id.</p>
                                     </li>
                                     <li class="decisions__item">
-                                          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                                          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                                                viewBox="0 0 20 20" fill="none">
                                                 <path d="M10.0007 19.1673C15.0549 19.1673 19.1673 15.0553 19.1673 10.0007C19.1673 9.12822 19.0455 8.26847 18.8044 7.44509C18.6856 7.04021 18.2628 6.80765 17.8568 6.92645C17.4516 7.04487 17.2197 7.46915 17.3382 7.87403C17.5379 8.5581 17.6395 9.27387 17.6395 10.0007C17.6395 14.2127 14.2127 17.6395 10.0007 17.6395C5.78863 17.6395 2.36176 14.2127 2.36176 10.0007C2.36176 5.78863 5.78863 2.36176 10.0007 2.36176C11.5314 2.36176 13.0042 2.80935 14.2597 3.65586C14.6092 3.89178 15.0844 3.79909 15.3199 3.44959C15.5556 3.09973 15.4637 2.62491 15.1138 2.38918C13.6051 1.37184 11.8371 0.833984 10.0007 0.833984C4.94641 0.833984 0.833984 4.94604 0.833984 10.0007C0.833984 15.0553 4.94641 19.1673 10.0007 19.1673Z"
                                                       fill="#FF5A30" />
                                                 <path d="M18.578 1.91131L10.0005 10.4884L7.25636 7.74464C6.93084 7.41932 6.40349 7.41932 6.07797 7.74464C5.75266 8.07016 5.75266 8.5975 6.07797 8.92302L9.41131 12.2564C9.57427 12.4193 9.78708 12.5005 10.0005 12.5005C10.2139 12.5005 10.4267 12.4193 10.5897 12.2564L19.7564 3.08969C20.0817 2.76417 20.0817 2.23683 19.7564 1.91131C19.4308 1.58599 18.9035 1.58599 18.578 1.91131Z"
                                                       fill="#FF5A30" />
                                           </svg>
-                                          <p class="item__text">A fermentum in morbi pretium aliquam adipiscing donec tempus.</p>
+                                          <p class="item__text">A fermentum in morbi pretium aliquam adipiscing donec
+                                                tempus.</p>
                                     </li>
                                     <li class="decisions__item">
-                                          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                                          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                                                viewBox="0 0 20 20" fill="none">
                                                 <path d="M10.0007 19.1673C15.0549 19.1673 19.1673 15.0553 19.1673 10.0007C19.1673 9.12822 19.0455 8.26847 18.8044 7.44509C18.6856 7.04021 18.2628 6.80765 17.8568 6.92645C17.4516 7.04487 17.2197 7.46915 17.3382 7.87403C17.5379 8.5581 17.6395 9.27387 17.6395 10.0007C17.6395 14.2127 14.2127 17.6395 10.0007 17.6395C5.78863 17.6395 2.36176 14.2127 2.36176 10.0007C2.36176 5.78863 5.78863 2.36176 10.0007 2.36176C11.5314 2.36176 13.0042 2.80935 14.2597 3.65586C14.6092 3.89178 15.0844 3.79909 15.3199 3.44959C15.5556 3.09973 15.4637 2.62491 15.1138 2.38918C13.6051 1.37184 11.8371 0.833984 10.0007 0.833984C4.94641 0.833984 0.833984 4.94604 0.833984 10.0007C0.833984 15.0553 4.94641 19.1673 10.0007 19.1673Z"
                                                       fill="#FF5A30" />
                                                 <path d="M18.578 1.91131L10.0005 10.4884L7.25636 7.74464C6.93084 7.41932 6.40349 7.41932 6.07797 7.74464C5.75266 8.07016 5.75266 8.5975 6.07797 8.92302L9.41131 12.2564C9.57427 12.4193 9.78708 12.5005 10.0005 12.5005C10.2139 12.5005 10.4267 12.4193 10.5897 12.2564L19.7564 3.08969C20.0817 2.76417 20.0817 2.23683 19.7564 1.91131C19.4308 1.58599 18.9035 1.58599 18.578 1.91131Z"
@@ -155,25 +158,30 @@
                                           <p class="item__text">Mauris odio pellentesque commodo, diam.</p>
                                     </li>
                                     <li class="decisions__item">
-                                          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                                          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                                                viewBox="0 0 20 20" fill="none">
                                                 <path d="M10.0007 19.1673C15.0549 19.1673 19.1673 15.0553 19.1673 10.0007C19.1673 9.12822 19.0455 8.26847 18.8044 7.44509C18.6856 7.04021 18.2628 6.80765 17.8568 6.92645C17.4516 7.04487 17.2197 7.46915 17.3382 7.87403C17.5379 8.5581 17.6395 9.27387 17.6395 10.0007C17.6395 14.2127 14.2127 17.6395 10.0007 17.6395C5.78863 17.6395 2.36176 14.2127 2.36176 10.0007C2.36176 5.78863 5.78863 2.36176 10.0007 2.36176C11.5314 2.36176 13.0042 2.80935 14.2597 3.65586C14.6092 3.89178 15.0844 3.79909 15.3199 3.44959C15.5556 3.09973 15.4637 2.62491 15.1138 2.38918C13.6051 1.37184 11.8371 0.833984 10.0007 0.833984C4.94641 0.833984 0.833984 4.94604 0.833984 10.0007C0.833984 15.0553 4.94641 19.1673 10.0007 19.1673Z"
                                                       fill="#FF5A30" />
                                                 <path d="M18.578 1.91131L10.0005 10.4884L7.25636 7.74464C6.93084 7.41932 6.40349 7.41932 6.07797 7.74464C5.75266 8.07016 5.75266 8.5975 6.07797 8.92302L9.41131 12.2564C9.57427 12.4193 9.78708 12.5005 10.0005 12.5005C10.2139 12.5005 10.4267 12.4193 10.5897 12.2564L19.7564 3.08969C20.0817 2.76417 20.0817 2.23683 19.7564 1.91131C19.4308 1.58599 18.9035 1.58599 18.578 1.91131Z"
                                                       fill="#FF5A30" />
                                           </svg>
-                                          <p class="item__text">Fermentum vestibulum est fermentum, egestas gravida scelerisque quis.</p>
+                                          <p class="item__text">Fermentum vestibulum est fermentum, egestas gravida
+                                                scelerisque quis.</p>
                                     </li>
                                     <li class="decisions__item">
-                                          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                                          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                                                viewBox="0 0 20 20" fill="none">
                                                 <path d="M10.0007 19.1673C15.0549 19.1673 19.1673 15.0553 19.1673 10.0007C19.1673 9.12822 19.0455 8.26847 18.8044 7.44509C18.6856 7.04021 18.2628 6.80765 17.8568 6.92645C17.4516 7.04487 17.2197 7.46915 17.3382 7.87403C17.5379 8.5581 17.6395 9.27387 17.6395 10.0007C17.6395 14.2127 14.2127 17.6395 10.0007 17.6395C5.78863 17.6395 2.36176 14.2127 2.36176 10.0007C2.36176 5.78863 5.78863 2.36176 10.0007 2.36176C11.5314 2.36176 13.0042 2.80935 14.2597 3.65586C14.6092 3.89178 15.0844 3.79909 15.3199 3.44959C15.5556 3.09973 15.4637 2.62491 15.1138 2.38918C13.6051 1.37184 11.8371 0.833984 10.0007 0.833984C4.94641 0.833984 0.833984 4.94604 0.833984 10.0007C0.833984 15.0553 4.94641 19.1673 10.0007 19.1673Z"
                                                       fill="#FF5A30" />
                                                 <path d="M18.578 1.91131L10.0005 10.4884L7.25636 7.74464C6.93084 7.41932 6.40349 7.41932 6.07797 7.74464C5.75266 8.07016 5.75266 8.5975 6.07797 8.92302L9.41131 12.2564C9.57427 12.4193 9.78708 12.5005 10.0005 12.5005C10.2139 12.5005 10.4267 12.4193 10.5897 12.2564L19.7564 3.08969C20.0817 2.76417 20.0817 2.23683 19.7564 1.91131C19.4308 1.58599 18.9035 1.58599 18.578 1.91131Z"
                                                       fill="#FF5A30" />
                                           </svg>
-                                          <p class="item__text">At pharetra libero blandit risus, fringilla sed commodo diam.</p>
+                                          <p class="item__text">At pharetra libero blandit risus, fringilla sed commodo
+                                                diam.</p>
                                     </li>
                                     <li class="decisions__item">
-                                          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                                          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                                                viewBox="0 0 20 20" fill="none">
                                                 <path d="M10.0007 19.1673C15.0549 19.1673 19.1673 15.0553 19.1673 10.0007C19.1673 9.12822 19.0455 8.26847 18.8044 7.44509C18.6856 7.04021 18.2628 6.80765 17.8568 6.92645C17.4516 7.04487 17.2197 7.46915 17.3382 7.87403C17.5379 8.5581 17.6395 9.27387 17.6395 10.0007C17.6395 14.2127 14.2127 17.6395 10.0007 17.6395C5.78863 17.6395 2.36176 14.2127 2.36176 10.0007C2.36176 5.78863 5.78863 2.36176 10.0007 2.36176C11.5314 2.36176 13.0042 2.80935 14.2597 3.65586C14.6092 3.89178 15.0844 3.79909 15.3199 3.44959C15.5556 3.09973 15.4637 2.62491 15.1138 2.38918C13.6051 1.37184 11.8371 0.833984 10.0007 0.833984C4.94641 0.833984 0.833984 4.94604 0.833984 10.0007C0.833984 15.0553 4.94641 19.1673 10.0007 19.1673Z"
                                                       fill="#FF5A30" />
                                                 <path d="M18.578 1.91131L10.0005 10.4884L7.25636 7.74464C6.93084 7.41932 6.40349 7.41932 6.07797 7.74464C5.75266 8.07016 5.75266 8.5975 6.07797 8.92302L9.41131 12.2564C9.57427 12.4193 9.78708 12.5005 10.0005 12.5005C10.2139 12.5005 10.4267 12.4193 10.5897 12.2564L19.7564 3.08969C20.0817 2.76417 20.0817 2.23683 19.7564 1.91131C19.4308 1.58599 18.9035 1.58599 18.578 1.91131Z"
@@ -182,6 +190,101 @@
                                           <p class="item__text">Integer ultricies viverra ut enim viverra ut.</p>
                                     </li>
                               </ul>
+                        </div>
+                  </div>
+            </section>
+            <section class="portfolio">
+                  <div class="portfolio-container container">
+                        <h2 class="portfolio__title title">Similar projects</h2>
+                        <div class="slider-btns">
+                              <div class="slider__btn disabled" id="slide-portfolio-to-left">
+                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                          xmlns="http://www.w3.org/2000/svg">
+                                          <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M9.20711 17.2071C8.81658 17.5976 8.18342 17.5976 7.79289 17.2071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929L7.79289 6.79289C8.18342 6.40237 8.81658 6.40237 9.20711 6.79289C9.59763 7.18342 9.59763 7.81658 9.20711 8.20711L6.41421 11L20 11C20.5523 11 21 11.4477 21 12C21 12.5523 20.5523 13 20 13L6.41421 13L9.20711 15.7929C9.59763 16.1834 9.59763 16.8166 9.20711 17.2071Z"
+                                                fill="#1E212C" />
+                                    </svg>
+                              </div>
+                              <div class="slider__btn" id="slide-portfolio-to-right">
+                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                          xmlns="http://www.w3.org/2000/svg">
+                                          <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M14.7929 6.79289C15.1834 6.40237 15.8166 6.40237 16.2071 6.79289L20.7071 11.2929C21.0976 11.6834 21.0976 12.3166 20.7071 12.7071L16.2071 17.2071C15.8166 17.5976 15.1834 17.5976 14.7929 17.2071C14.4024 16.8166 14.4024 16.1834 14.7929 15.7929L17.5858 13H4C3.44772 13 3 12.5523 3 12C3 11.4477 3.44772 11 4 11H17.5858L14.7929 8.20711C14.4024 7.81658 14.4024 7.18342 14.7929 6.79289Z"
+                                                fill="#1E212C" />
+                                    </svg>
+                              </div>
+                        </div>
+                        <div class="portfolio__slider">
+                              <ul class="portfolio__slides" id="portfolio__slides">
+                                    <li class="slider__slide" id="portfolio-slide-1">
+                                          <img src="../assets/portfolio/luxiory-beach-house.png"
+                                                alt="Kids Bedroom With Decorations" />
+                                          <div class="content">
+                                                <h3 class="slide-title title">
+                                                      Luxury Beach House
+                                                </h3>
+                                                <p class="slide-subtitle subtitle">Private Houses</p>
+                                                <a href="./project.html" class="slide-btn btn m-btn outline">View
+                                                      Project</a>
+                                          </div>
+                                    </li>
+                                    <li class="slider__slide" id="portfolio-slide-2">
+                                          <img src="../assets/portfolio/painted-house.png"
+                                                alt="Modern Double Bedroom" />
+                                          <div class="content">
+                                                <h3 class="slide-title title">Brown and Gray Painted House</h3>
+                                                <p class="slide-subtitle subtitle">Private Houses</p>
+                                                <a href="./project.html" class="slide-btn btn m-btn outline">View
+                                                      Project</a>
+                                          </div>
+                                    </li>
+                                    <li class="slider__slide" id="portfolio-slide-3">
+                                          <img src="../assets/portfolio/scandinavian-interior.jpg"
+                                                alt="Scandinavian Style Interior" />
+                                          <div class="content">
+                                                <h3 class="slide-title title">Scandinavian Style Interior</h3>
+                                                <p class="slide-subtitle subtitle">Private houses</p>
+                                                <a href="./project.html" class="slide-btn btn m-btn outline">View
+                                                      Project</a>
+                                          </div>
+                                    </li>
+                                    <li class="slider__slide" id="portfolio-slide-1">
+                                          <img src="../assets/portfolio/luxiory-beach-house.png"
+                                                alt="Kids Bedroom With Decorations" />
+                                          <div class="content">
+                                                <h3 class="slide-title title">
+                                                      Luxury Beach House
+                                                </h3>
+                                                <p class="slide-subtitle subtitle">Private Houses</p>
+                                                <a href="./project.html" class="slide-btn btn m-btn outline">View
+                                                      Project</a>
+                                          </div>
+                                    </li>
+                                    <li class="slider__slide" id="portfolio-slide-2">
+                                          <img src="../assets/portfolio/painted-house.png"
+                                                alt="Modern Double Bedroom" />
+                                          <div class="content">
+                                                <h3 class="slide-title title">Brown and Gray Painted House</h3>
+                                                <p class="slide-subtitle subtitle">Private Houses</p>
+                                                <a href="./project.html" class="slide-btn btn m-btn outline">View
+                                                      Project</a>
+                                          </div>
+                                    </li>
+                                    <li class="slider__slide" id="portfolio-slide-3">
+                                          <img src="../assets/portfolio/scandinavian-interior.jpg"
+                                                alt="Scandinavian Style Interior" />
+                                          <div class="content">
+                                                <h3 class="slide-title title">Scandinavian Style Interior</h3>
+                                                <p class="slide-subtitle subtitle">Private houses</p>
+                                                <a href="./project.html" class="slide-btn btn m-btn outline">View
+                                                      Project</a>
+                                          </div>
+                                    </li>
+                              </ul>
+                        </div>
+                        <div class="portfolio__learn-more learn-more">
+                              <h3 class="learn-more__title title">Explore all our works</h3>
+                              <a href="./portfolio.html" class="btn l-btn">View portfolio</a>
                         </div>
                   </div>
             </section>
